--- a/roles/database-mysql/templates/db-and-users.sql.j2
+++ b/roles/database-mysql/templates/db-and-users.sql.j2
@@ -4,6 +4,6 @@ DELETE FROM mysql.user WHERE USER='{{db.user}}';
 FLUSH PRIVILEGES;
 CREATE DATABASE `{{db.user}}` /*!40100 DEFAULT CHARACTER SET utf8 */;
 CREATE USER '{{db.user}}'@'%' IDENTIFIED BY '{{db.pswd}}';
-GRANT ALL PRIVILEGES ON '{{db.user}}'.* TO '{{db.user}}'@'%';
+GRANT ALL PRIVILEGES ON {{db.user}}.* TO '{{db.user}}'@'%';
 {% endfor %}
 commit;
