--- a/roles/database-mysql/templates/db-and-users.sql.j2
+++ b/roles/database-mysql/templates/db-and-users.sql.j2
@@ -4,11 +4,15 @@ DELETE FROM mysql.user WHERE USER='{{db.name}}';
 FLUSH PRIVILEGES;
 {% endfor %}
 commit;
+
+CREATE USER '{{dba.name}}'@'%' IDENTIFIED BY '{{dba.pswd}}';
+grant all privileges on *.* to '{{dba.name}}'@'%' identified by '{{dba.pswd}}' with grant option;
+
 {% for user, db in users.items() %}
 CREATE DATABASE `{{db.name}}` /*!40100 DEFAULT CHARACTER SET utf8 */;
-{% for host in ['%','localhost','127.0.0.1','::1'] %}
+{% for host in ['%',inventory_hostname,'localhost','127.0.0.1','::1'] %}
 CREATE USER '{{db.name}}'@'{{host}}' IDENTIFIED BY '{{db.pswd}}';
+GRANT ALL PRIVILEGES ON *.* TO '{{db.name}}'@'{{host}}';
 {% endfor %}
-GRANT ALL PRIVILEGES ON {{db.name}}.* TO '{{db.name}}'@'%';
 {% endfor %}
 commit;
