--- a/roles/kdc/templates/krb5.conf.j2
+++ b/roles/kdc/templates/krb5.conf.j2
@@ -1,7 +1,7 @@
 [libdefaults]
   renew_lifetime = 7d
   forwardable = true
-  default_realm = {{realm}}
+  default_realm = {{kerberos.realm}}
   ticket_lifetime = 24h
   dns_lookup_realm = false
   dns_lookup_kdc = false
@@ -10,8 +10,8 @@
   default_tkt_enctypes = aes des3-cbc-sha1 rc4 des-cbc-md5
 
 [domain_realm]
-  hwx.site = {{realm}}
-  .hwx.site = {{realm}}
+  hwx.site = {{kerberos.realm}}
+  .hwx.site = {{kerberos.realm}}
 
 [logging]
   default = FILE:/var/log/krb5kdc.log
@@ -19,7 +19,7 @@
   kdc = FILE:/var/log/krb5kdc.log
 
 [realms]
-  {{realm}} = {
-    admin_server = {{inventory_hostname}}
-    kdc = {{inventory_hostname}}
+  {{kerberos.realm}} = {
+    admin_server = {{hostvars[groups['kdc'][0]].ansible_fqdn}}
+    kdc = {{hostvars[groups['kdc'][0]].ansible_fqdn}}
   }
