--- a/roles/blueprints/templates/hdp_310_static_01/template.json.j2
+++ b/roles/blueprints/templates/hdp_310_static_01/template.json.j2
@@ -78,7 +78,7 @@
                     "name": "ambari-server", 
                     "principal": {
                         "type": "user", 
-                        "value": "ambari-server@${realm}"
+                        "value": "ambari-server@{{kerberos.realm}}"
                     }
                 }
             ], 
