make clustername configurable

--- a/roles/blueprints/templates/hdp_310_static_01/blueprint.json.j2
+++ b/roles/blueprints/templates/hdp_310_static_01/blueprint.json.j2
@@ -1,6 +1,6 @@
 {
     "Blueprints": {
-        "blueprint_name": "blueprint-def", 
+        "blueprint_name": "{{cluster.name}}", 
         "stack_name": "HDP", 
         "stack_version": "3.1"
     }, 
