--- a/roles/blueprints/templates/hdp_310_static_01/template.json.j2
+++ b/roles/blueprints/templates/hdp_310_static_01/template.json.j2
@@ -1,5 +1,5 @@
 {
-    "blueprint": "blueprint-def", 
+    "blueprint": "{{cluster.name}}", 
     "config_recommendation_strategy": "ALWAYS_APPLY_DONT_OVERRIDE_CUSTOM_VALUES", 
     "configurations": [
         {
